feat : 리팩토링 및 기능추가 (#172)
* feat: harden report creation rules

* feat: block reported user on report

* fix: align report notification url

* refactor: standardize report exceptions

* feat: notify reporter when report processed

* test: add report processed notification listener

* fix: avoid double update in comment edit

* fix: handle missing avatar in follow list

* fix: unify social notification urls

* feat: apply user blocks to social feeds

* refactor: standardize social exceptions

* fix: use Korea timezone for guestbook limits

* fix: guard comment profile image when avatar missing

* refactor: use profileImageUrl in diary responses

* chore: normalize avatar post route

* feat: hide blocked users in comment lists

* feat: prevent guestbook from blocked users

* feat: block comments from blocked users

* feat: enforce block on follow relationships

* feat: deny access to blocked users content

* fix: compute avatar post like count via query

* feat: block likes when users are blocked

* feat: add avatar post bookmarks

* feat: paginate avatar post bookmarks

* feat: add random feed session api

* feat: include remaining count in random feed session

* feat: add redis-backed random feed sessions

* chore: add redis config for random feed sessions

* refactor: harden random feed session errors

* test: add redis random feed session store

* feat: restrict garden access to following users

* docs: add garden access policy

* feat: block garden interactions for blocked users

* feat: add avatar created notification type

* fix: fail avatar generation when ai fails

* feat: require follow for garden interactions

* fix: record last visited garden for viewer

* fix: handle null avatar in garden response

* fix: restrict garden background updates to owner

* fix: validate quiz answer and ownership

* chore: remove unused mission panel api model

* refactor: standardize mission service exceptions

* test: add quiz service coverage

* docs: note home mission panel